--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -10,8 +10,7 @@
 		}
 	],
 	"background": {
-		"scripts": ["background.js"],
-		"persistent": false
+		"scripts": ["background.js"]
 	},
 	"browser_action": {
 		"default_title": "Auto Get Twitch Gift"
