--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -2,11 +2,12 @@
 	"name": "Auto Get Bonus",
 	"description": "Module permettant de recuperer automatiquement les gifts de points de chaine twitch",
 	"version": "1.1.0",
-	"permissions": ["activeTab"],
+	"permissions": ["activeTab", "tabs"],
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
-			"js": ["content.js"]
+			"js": ["content.js"],
+			"run_at": "document_start"
 		}
 	],
 	"background": {
@@ -14,7 +15,8 @@
 		"persistent": false
 	},
 	"browser_action": {
-		"default_title": "Auto Get Twitch Gift"
+		"default_title": "Auto Get Twitch Gift",
+		"default_popup": "index.html"
 	},
 	"icons": {
 		"64": "icon/Gift.png"
