--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,19 +1,22 @@
 {
 	"name": "Auto Get Bonus",
 	"description": "Module permettant de recuperer automatiquement les gifts de points de chaine twitch",
-	"version": "1.1.0",
-	"permissions": ["activeTab"],
+	"version": "2.0.0",
+	"permissions": ["activeTab", "tabs"],
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
-			"js": ["content.js"]
+			"js": ["content.js"],
+			"run_at": "document_start"
 		}
 	],
 	"background": {
-		"scripts": ["background.js"]
+		"scripts": ["background.js"],
+		"persistent": false
 	},
 	"browser_action": {
-		"default_title": "Auto Get Twitch Gift"
+		"default_title": "Auto Get Twitch Gift",
+		"default_popup": "index.html"
 	},
 	"icons": {
 		"64": "icon/Gift.png"
