--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "Auto Get Bonus",
-	"description": "Module permettant de recuperer automatiquement les gifts de points de chaine twitch",
-	"version": "4.1.6",
-	"permissions": ["activeTab", "tabs"],
+	"name": "Twitch Bonus Auto Clicker",
+	"description": "Extension that automatically clicks on twitch chain points bonus",
+	"version": "4.2.0",
+	"permissions": ["tabs"],
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
@@ -15,7 +15,7 @@
 		"persistent": true
 	},
 	"browser_action": {
-		"default_title": "Auto Get Twitch Gift"
+		"default_title": "Twitch Bonus Auto Clicker"
 	},
 	"icons": {
 		"256": "icon/Gift.png"
