--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Twitch Bonus Auto Clicker",
 	"description": "Extension that automatically collects bonus channel points on Twitch",
-	"version": "4.2.2",
+	"version": "4.3.0",
 	"content_scripts": [
 		{
 			"matches": ["*://www.twitch.tv/*"],
@@ -10,14 +10,13 @@
 		}
 	],
 	"background": {
-		"scripts": ["background.js"],
-		"persistent": true
+		"service_worker": "background.js"
 	},
-	"browser_action": {
+	"action": {
 		"default_title": "Twitch Bonus Auto Clicker"
 	},
 	"icons": {
 		"256": "icon/Gift.png"
 	},
-	"manifest_version": 2
+	"manifest_version": 3
 }
